# aws-lambda-ecs-open-telemetry-sample

./: .dockerignore  .gitallowed  pyproject.toml
cdk/: bootstrap-template.yaml  cdk.context.json  cdk.json  package-lock.json
cdk/lib/: otel-ecs-sample-stack.ts  otel-lambda-sample-stack.ts  otel-lambda-sample-stack2.ts  powertools-otel-lambda-sample-stack.ts  stepfunctions.ts
cdk/lib/lambda-invoke-ecs/: ecs.ts  lambda.ts  shared.ts
services/ecs/: Dockerfile
services/ecs/src/: app.py
services/lambda-invoke-ecs/ecs/: Dockerfile
services/lambda-invoke-ecs/ecs/src/: app.py
services/lambda-invoke-ecs/lambda/src/: app.py
services/otel-lambda/src/: app.py
services/powertools-and-otel-lambda/src/: app.py
